# pytorch_extra_mhirano

./: .buildinfo  .readthedocs.yaml  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytorch_extra_mhirano.html  pytorch_extra_mhirano.nn.html  search.html  searchindex.js  tox.ini
.github/workflows/: bump.yml  ci-python-min.yml  ci-python.yml  codecov.yml  doc.yml  python-publish.yml  release-tagger.yml  release-tagging.yml  release.yml
_modules/: index.html
_modules/pytorch_extra_mhirano/experimental/: variance_decomposition.html
_modules/pytorch_extra_mhirano/nn/: attention.html  loss.html  pe.html  pyramid.html  residual.html  sum.html
_sources/: index.rst.txt
_sources/reference/: index.rst.txt
docs/: Makefile  conf.py  make.bat  requirements.txt
docs/source/: conf.py  index.rst  pytorch_extra_mhirano.nn.rst  pytorch_extra_mhirano.rst
docs/source/reference/: index.rst
pytorch_extra_mhirano/: __init__.py  version.py
pytorch_extra_mhirano/experimental/: variance_decomposition.py
pytorch_extra_mhirano/nn/: __init__.py  attention.py  loss.py  pe.py  pyramid.py  residual.py  sum.py
pytorch_extra_mhirano/utils/: __init__.py  buffer.py
reference/: index.html
tests/pytorch_extra_mhirano/experimental/: test_variance_decomposition.py
tests/pytorch_extra_mhirano/nn/: test_attention.py
tests/pytorch_extra_mhirano/utils/: test_buffer.py
