[tool.poetry]
name = "pytorch_extra_mhirano"
version = "0.1.6"
description = ""
authors = ["Masanori HIRANO <masa.hirano.1996@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = ">=1.9.0,<2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
tox = "^3.24.5"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"
pydata-sphinx-theme = "^0.8.0"
scikit-learn = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

